# docx-editor

./: .gitignore  README.md  main.py  prek.toml  pyproject.toml
tests/: test_main.py
